--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       button:focus {outline:0 !important;}
       * {
         cursor: default !important;
+        -webkit-user-select: none;
       }
       /* design */
       html {
@@ -68,26 +69,48 @@
       div#footer {
         background-color: black;
         color: #444;
-        padding-top: 4px; padding-bottom: 4px;
+        margin-top: 4px; padding-bottom: 0px;
+      }
+      div#main {
+        overflow-y: scroll;
+        padding-top: 30px;
+        padding-bottom: 30px;
+        padding-left: 40px;
+        padding-right: 40px;
       }
 
       /* bootstrap */
       nav {
         padding-left: 20px;
       }
-      div#main {
-        padding-left: 40px;
-        padding-right: 40px;
+      .navbar {
+        margin-bottom: 0;
       }
       .table thead tr th {
         border: 0;
+      }
+      .progress {
+        height: 12px;
+        margin-bottom: 0;
+        position: relative;
+        border-radius: 0;
+      }
+      .progress-bar {
+        font-size: 8px;
+        line-height: 12px;
+      }
+      .progress-bar span {
+        position: absolute;
+        display: block;
+        width: 100%;
+        /*color: black;*/
       }
     </style>
   </head>
   <body ng-controller="cmodCtrl">
     <div class="container-fluid" style="padding: 0;">
 
-      <div class="navbar navbar-default">
+      <div id="header" class="navbar navbar-default">
         <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
@@ -130,18 +153,18 @@
             <table id="playlist" class="table table-condensed table-hover">
               <thead>
                 <tr>
-                  <th><small>#</small></th>
-                  <th><small>SONG</small></th>
-                  <th><small>FILENAME</small></th>
-                  <th><small>LENGTH</small></th>
+                  <th class="col-xs-1"><small>#</small></th>
+                  <th class="col-xs-6"><small>SONG</small></th>
+                  <th class="col-xs-4"><small>FILENAME</small></th>
+                  <th class="col-xs-1"><small>TIME</small></th>
                 </tr>
               </thead>
               <tbody>
-                <tr ng-repeat="song in playlist" ng-click="playSongInPlaylist($index)">
-                    <td>{{ $index + 1 }}</td>
-                    <td>{{ song.name }}</td>
-                    <td>{{ song.filename }}</td>
-                    <td>{{ song.duration }}</td>
+                <tr ng-right-click="showOptions($index, $event)" ng-repeat="song in playlist" ng-click="playSongInPlaylist($index)">
+                  <td>{{ $index + 1 }}</td>
+                  <td>{{ song.name }}</td>
+                  <td>{{ song.filename }}</td>
+                  <td>{{ song.duration }}</td>
                 </tr>
               </tbody>
               <tfoot>
@@ -162,7 +185,7 @@
       </div>
 
 
-      <footer>
+      <!--footer-->
         <div id="footer" class="navbar-fixed-bottom">
             <div style="text-align: center;" class="container-fluid">
               <div class="row">
@@ -195,9 +218,16 @@
                   <input style="display: none" id="fileDialog" type="file"/>
                 </div>
               </div>
+              <div class="row">
+                <div class="progress" ng-click="seekProgressBar($event)">
+                  <div id="song_position_progress" class="progress-bar" role="progressbar" style="width: 0%;">
+                    <span id="song_position_label"></span>
+                  </div>
+                </div>
+              </div>
           </div>
         </div>
-      </footer>
+      <!--/footer-->
 
 
     </div>
