--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bootstrap/dist/js/bootstrap.js"></script>
+    <script src="app/cmod.js"></script>
     <script src="app/ui/controllers.js"></script>
     <style>
       /* global */
@@ -126,44 +127,7 @@
 
     <div class="container-fluid" style="padding: 0;">
 
-      <div id="header" class="navbar navbar-default">
-        <div class="container-fluid">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <a id="brand" class="navbar-brand" href="#">cmod3</a>
-          </div>
-
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Playlist</a></li>
-              <li><a href="#">Info</a></li>
-              <li>
-                <div id="vus">
-                  <div id="vuleft" class="vu">
-                    <div class="vu_overlay"></div>
-                  </div>
-                  <div id="vuright" class="vu">
-                    <div class="vu_overlay"></div>
-                  </div>
-                </div>
-              </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More <span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="#" ng-click="devConsole()">Console</a></li>
-                  <li><a href="#" ng-click="minimize()">Minimize</a></li>
-                  <li><a href="#" ng-click="close()">Close</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">Donate</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-      </div>
+      <ng-include src="'app/ui/header/header.tpl.html'"></ng-include>
 
       <div id="main" class="container-fluid">
         <div class="row">
