lots of bugs squashed

--- a/app/ui/controls/controls.tpl.html
+++ b/app/ui/controls/controls.tpl.html
@@ -19,10 +19,10 @@
             <span class="glyphicon glyphicon-pause"></span>
             Pause
           </button>
-          <button class="btn btn-default" ng-click="addFilesToPlaylist()">
+          <!--button class="btn btn-default" ng-click="addFilesToPlaylist()">
             <span class="glyphicon glyphicon-file"></span>
             Add file(s)
-          </button>
+          </button-->
           <input style="display: none" id="fileDialog" type="file"/>
           <button class="btn btn-default" ng-click="playNectarine()">
             <span class="glyphicon glyphicon-cd" ></span>
