--- a/app/ui/header/header.tpl.html
+++ b/app/ui/header/header.tpl.html
@@ -1,8 +1,8 @@
 <div ng-controller="cmodHeaderCtrl" id="header" class="navbar navbar-default">
-  <div class="container-fluid">
 
+  <div class="container-fluid">
     <div class="navbar-header">
-      <a id="brand" class="navbar-brand" href="#">cmod3</a>
+      <span id="brand" class="navbar-brand">cmod3</span>
     </div>
 
     <div class="collapse navbar-collapse">
