--- a/app/ui/info/info.tpl.html
+++ b/app/ui/info/info.tpl.html
@@ -3,25 +3,25 @@
     <div class="col-xs-12">
       <dl class="dl-horizontal">
         <dt>Title</dt>
-        <dd>{{ state.metadata.title }}</dd>
+        <dd>{{ state.current_song.metadata.title }}</dd>
       </dl>
       <dl class="dl-horizontal">
         <dt>Length</dt>
-        <dd>{{ state.metadata.duration }}</dd>
+        <dd>{{ state.current_song.metadata.duration }}</dd>
       </dl>
       <dl class="dl-horizontal">
         <dt>Tracker</dt>
-        <dd>{{ state.metadata.tracker }}</dd>
+        <dd>{{ state.current_song.metadata.tracker }}</dd>
       </dl>
       <dl class="dl-horizontal">
         <dt>Path</dt>
-        <dd>{{ state.metadata.path }}</dd>
+        <dd>{{ state.current_song.metadata.path }}</dd>
       </dl>
     </div>
   </div>
   <div class="row well">
     <div class="col-xs-12">
-      <pre>{{ state.metadata.message }}</pre>
+      <pre>{{ state.current_song.metadata.message }}</pre>
     </div>
   </div>
 </div>
