--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
         cursor: default !important;
         -webkit-user-select: none;
       }
+      ::-webkit-scrollbar { width: 0 !important }
       /* design */
       html {
         width: 100%;
         height: 100%;
-        -webkit-app-region: drag;
         overflow: hidden;
+        -webkit-app-region: drag;
       }
       body {
         width: 100%;
@@ -77,6 +78,8 @@
         float: right;
         right: 0;
         transform-origin: right;
+      }
+      div#header {
       }
       table#playlist {
         border-radius: 5px;
