--- a/app/ui/info/info.tpl.html
+++ b/app/ui/info/info.tpl.html
@@ -1,13 +1,13 @@
 <div ng-controller="cmodInfoCtrl" id="info" class="container-fluid" style="height: {{ height }}px">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-6">
       <dl class="dl-horizontal">
         <dt>Title</dt>
         <dd>{{ state.current_song.metadata.title }}</dd>
       </dl>
       <dl class="dl-horizontal">
         <dt>Length</dt>
-        <dd>{{ state.current_song.metadata.duration }}</dd>
+        <dd>{{ state.current_song.metadata.duration | mmss }}</dd>
       </dl>
       <dl class="dl-horizontal">
         <dt>Tracker</dt>
@@ -18,10 +18,8 @@
         <dd>{{ state.current_song.metadata.path }}</dd>
       </dl>
     </div>
-  </div>
-  <div class="row well">
-    <div class="col-xs-12">
-      <pre>{{ state.current_song.metadata.message }}</pre>
+    <div class="col-xs-6">
+      <pre class="well">{{ state.current_song.metadata.message }}</pre>
     </div>
   </div>
 </div>
