--- a/app/ui/info/info.tpl.html
+++ b/app/ui/info/info.tpl.html
@@ -1,22 +1,12 @@
 <div ng-controller="cmodInfoCtrl" id="info" class="container-fluid" style="height: {{ height }}px">
   <div class="row">
-    <div class="col-xs-6">
-      <dl class="dl-horizontal">
-        <dt>Title</dt>
-        <dd>{{ state.current_song.metadata.title }}</dd>
-      </dl>
-      <dl class="dl-horizontal">
-        <dt>Length</dt>
-        <dd>{{ state.current_song.metadata.duration | mmss }}</dd>
-      </dl>
-      <dl class="dl-horizontal">
-        <dt>Tracker</dt>
-        <dd>{{ state.current_song.metadata.tracker }}</dd>
-      </dl>
-      <dl class="dl-horizontal">
-        <dt>Path</dt>
-        <dd>{{ state.current_song.metadata.path }}</dd>
-      </dl>
+    <div class="col-xs-6" style="text-align: center; word-wrap: break-word;">
+      <hr/>
+      <p><strong>{{ state.current_song.metadata.title }}</strong></p>
+      <p>{{ state.current_song.metadata.duration | mmss }}</p>
+      <p>{{ state.current_song.metadata.tracker }}</p>
+      <p><small>{{ state.current_song.metadata.path }}</small></p>
+      <hr/>
     </div>
     <div class="col-xs-6">
       <pre class="well">{{ state.current_song.metadata.message }}</pre>
