settings and improvements

--- a/app/ui/info/info.tpl.html
+++ b/app/ui/info/info.tpl.html
@@ -1,4 +1,4 @@
-<div ng-controller="cmodInfoCtrl" id="info" class="container-fluid" style="height: {{ height }}px">
+<div id="info" class="container-fluid" style="height: {{ height }}px">
   <div class="row">
     <div class="col-xs-6" style="text-align: center; word-wrap: break-word;">
       <hr/>
