--- a/app/ui/playlist/playlist.tpl.html
+++ b/app/ui/playlist/playlist.tpl.html
@@ -1,4 +1,4 @@
-<div ng-controller="cmodPlaylistCtrl" id="main" class="container-fluid" style="height: {{ height }}px">
+<div id="main" class="container-fluid" style="height: {{ height }}px">
   <div class="row">
     <div class="col-xs-12">
       <div ng-show="state.playlist.length === 0" class="panel panel-default">
