--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="app/ui/playlist/playlist.js"></script>
     <script src="app/ui/controls/controls.js"></script>
     <script src="app/ui/info/info.js"></script>
+    <script src="app/ui/settings/settings.js"></script>
 
     <style>
       /* global */
