--- a/app/ui/header/header.tpl.html
+++ b/app/ui/header/header.tpl.html
@@ -24,7 +24,7 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" role="button">More <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a ng-click="">Settings</a></li>
+            <li><a ui-sref="settings">Settings</a></li>
             <li><a ng-click="devConsole()">Console</a></li>
             <li><a ng-click="minimize()">Minimize</a></li>
             <li><a ng-click="close()">Close</a></li>
