--- a/app/ui/settings/settings.tpl.html
+++ b/app/ui/settings/settings.tpl.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12" style="text-align: center;">
       <div class="checkbox">
         <label>
-          <input ng-model="vu" ng-change="hideVU()" type="checkbox"> Disable VU meter (saves CPU)
+          <input ng-model="vuDisabled" ng-change="hideVU()" type="checkbox"> Disable VU meter (saves CPU)
         </label>
       </div>
       <hr/>
