--- a/app/ui/header/header.tpl.html
+++ b/app/ui/header/header.tpl.html
@@ -5,7 +5,7 @@
       <span id="brand" class="navbar-brand">cmod3</span>
     </div>
 
-    <div class="collapse navbar-collapse">
+    <div class="collpase navbar-collapse">
       <ul class="nav navbar-nav">
         <li ui-sref-active="active"><a ui-sref="playlist">Playlist</a></li>
         <li ui-sref-active="active"><a ui-sref="info">Info</a></li>
