ui and rebuilt libopenmpt

--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@
       }
 
       /* bootstrap */
+      .table-condensed>thead>tr>th, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>tbody>tr>td, .table-condensed>tfoot>tr>td {
+        padding: 2px;
+      }
+      .btn-default:hover {
+        background-image: -webkit-gradient(linear, left top, left bottom, from(#484e55), color-stop(60%, #3a3f44), to(#313539));
+      }
+      .btn-default:active {
+        background-image: -webkit-gradient(linear, left top, left bottom, from(#020202), color-stop(40%, #101112), to(#191b1d));
+      }
       .dropdown:hover .dropdown-menu {
         display: block;
       }
