--- a/app/ui/settings/settings.tpl.html
+++ b/app/ui/settings/settings.tpl.html
@@ -14,7 +14,7 @@
       </div>
       <div class="checkbox">
         <label>
-          <input ng-model="shuffle" ng-change="sufflePlaylist()" type="checkbox"> Shuffle playlist
+          <input ng-model="shuffle" ng-change="shufflePlaylist()" type="checkbox"> Shuffle playlist
         </label>
       </div>
     </div>
